# openfoam-utils

./: .gitignore  .gitmodules  README.md  compile_external_dependencies.sh
cases/: .gitignore
cases/dns_channel/: Allrun.sh
cases/dns_channel/0/: p
cases/dns_channel/0.org/: U
cases/dns_channel/constant/: fvOptions  transportProperties
cases/dns_channel/graphs/: Ux.plt  kbal.plt
cases/dns_channel/graphs/1142.397325/: D_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/1370.87679/: D_ii.xy  E_ii.xy  P_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/1599.356255/: D_ii.xy  E_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/1599.356255_targetMesh/: D_ii.xy  E_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/1599.386255_targetMesh/: D_ii.xy  E_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/182.783572/: D_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/274.175358/: D_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/365.567144/: D_ii.xy  E_ii.xy  P_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/456.95893/: D_ii.xy  E_ii.xy  P_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/502.65482457436684/: D_ii.xy  E_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/685.438395/: D_ii.xy  E_ii.xy  P_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/685.43839714686385/: D_ii.xy  E_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/91.391786/: D_ii.xy  E_ii.xy  P_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/913.91786/: D_ii.xy  E_ii.xy  P_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/graphs/913.91786286248521/: D_ii.xy  E_ii.xy  P_ii.xy  Pi_ii.xy  T_ii.xy  Ux.xy
cases/dns_channel/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  runPostDict  yplus_302  yplus_6
cases/dns_channel_poly/: Allrun  gen_mesh  run.sh
cases/dns_channel_poly/0.org/: U  p
cases/dns_channel_poly/system/: avgToTarget  controlDict  decomposeParDict  fvSolution  mirrorMeshDict  renumberCoupledPatchesDict  yplus_151  yplus_392  yplus_61  yplus_98
cases/external_cube/0.org/: U  p
cases/external_cube/system/: blockMeshDict  controlDict  decomposeParDict  fvSolution
cases/external_sphere/0.org/: nut
cases/external_sphere/constant/: transportProperties
cases/external_sphere/system/: blockMeshDict  controlDict
cases/filtering_test_1/system/: blockMeshDict  controlDict
cases/filtering_test_2/: Allclean.sh  Allrun.sh  cylinders.geo  setBoundaryTypes.sh
cases/filtering_test_2/constant/: generateSinesDict  transportProperties
cases/filtering_test_2/system/: controlDict
cases/filtering_test_3/: Allclean.sh  Allrun.sh
cases/filtering_test_3/system/: decomposeParDict  fvSchemes
cases/laminar_channel/: Allrun.sh
cases/laminar_channel/constant/: perturbUDict  postChannelDict  transportProperties
cases/laminar_channel/system/: blockMeshDict  caseProperties  controlDict  fvSchemes  fvSolution  yplus_251  yplus_40  yplus_5
cases/packed_bed/: create_mesh.sh
cases/packed_bed/quarter_template/system/: blockMeshDict  fvSolution
cases/simple_channel/hex_distorted_inviscid/constant/: meshPhi
cases/simple_channel/hex_distorted_inviscid/system/: controlDict
cases/simple_channel/hex_distorted_viscous/system/: distortMeshDict
cases/simple_channel/hex_internal_distorted_inviscid/system/: distortMeshDict  fvSchemes  (+1 more)
cases/simple_channel/poly_inviscid/: import_mesh.sh
cases/simple_channel/poly_viscous/: import_mesh.sh
cases/sphere_Re300/: UMean_axis.csv  UPrime_axis.csv  post.ipynb
cases/sphere_Re300/0.org/: U  nut  p
cases/sphere_Re300/constant/: transportProperties  turbulenceProperties
cases/sphere_Re300/system/: blockMeshDict  controlDict  decomposeParDict
dicts/: perturbUDict
meshes/: .gitignore  half_cube80k.cgns  half_cube8k5.cgns
references/sphere_Re300/johnson/: Uavg.csv  cd.csv  urms.csv
references/sphere_Re300/tomboulides/: about.txt  cd.csv
src/: CMakeLists.txt
src/applications/: CMakeLists.txt
src/applications/broadcastTargetMesh/: CMakeLists.txt  broadcastTargetMesh.cpp
src/applications/cgnsToFoam/: CMakeLists.txt  cgnsToFoam.cpp  cgnsToFoam.h
src/applications/cleanUpMirroredMesh/: CMakeLists.txt  cleanUpMirroredMesh.cpp  meshTools.h
src/applications/deltaSolver/: CMakeLists.txt  UEqn.H  createFields.H  deltaSolver.C
src/applications/distortBoundaryMesh/: CMakeLists.txt  distortBoundaryMesh.cpp
src/applications/distortMesh/: CMakeLists.txt  distortMesh.cpp
src/applications/explFilteredPimpleFoam/: CMakeLists.txt  createLESFields.H  explFilteredPimpleFoam.C
src/applications/gatherTargetMesh/: CMakeLists.txt  gatherTargetMesh.cpp
src/applications/generateSines/: CMakeLists.txt  createFields.H  generateSines.C
src/applications/orthoQuality/: CMakeLists.txt  orthoQuality.cpp
src/applications/perturbUChannel/: CMakeLists.txt  perturbUChannel.C
src/applications/postChannel/: CMakeLists.txt  calculateFields.H  collapse.H  readFields.H  userPostChannel.C
src/applications/renumberCoupledPatches/: CMakeLists.txt  renumberCoupledPatches.cpp
src/applications/splitByRegion/: CMakeLists.txt  splitByRegion.cpp
src/functionObjects/: CMakeLists.txt
src/functionObjects/M/: M.C  M.H
src/functionObjects/cellExplicitFilter/: cellExplicitFilter.cpp  cellExplicitFilter.h
src/functionObjects/explicitLaplaceFilter/: explicitLaplaceFilter.C  explicitLaplaceFilter.H
src/functionObjects/filters/: CellFilter.cpp  CellFilter.h  UnstructuredMeshFilter.h
src/functionObjects/kBudget/: kBudget.C  kBudget.H
src/functionObjects/kBudgetCorrelations/: kBudgetCorrelations.C  kBudgetCorrelations.H
src/functionObjects/resolvedKineticEnergy/: resolvedKineticEnergy.C  resolvedKineticEnergy.H
src/functionObjects/trueExplicitFilter/: FilterBase.h  FilterDefinitionBase.h  SphericalFilter.h  trueExplicitFilter.cpp  trueExplicitFilter.h
src/functionObjects/turbulentKineticEnergy/: turbulentKineticEnergy.C  turbulentKineticEnergy.H
src/functionObjects/visRatio/: visRatio.C  visRatio.H
(+40 files in other folders)
