add_subdirectory(cgnsToFoam)
add_subdirectory(distortBoundaryMesh)
add_subdirectory(splitByRegion)
add_subdirectory(cleanUpMirroredMesh)
add_subdirectory(renumberCoupledPatches)
add_subdirectory(orthoQuality)
add_subdirectory(explFilteredPimpleFoam)
add_subdirectory(deltaSolver)
add_subdirectory(perturbUChannel)
add_subdirectory(postChannel)
add_subdirectory(generateSines)
